--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Kalkulator</title>
+	<title>Novi Kalkulator</title>
 	<style type="text/css">
 		#label{
 			width: 500px;
